# gluon_language-server

./: .gitignore  .travis.yml  .vscodeignore  Cargo.toml  README.md  build.rs  esbuild.js  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.github/workflows/: ci.yml
src/: async_io.rs  check_importer.rs  debugger.rs  debugger.ts  diagnostics.rs  extension.ts  gluon_debugger.rs  language_server.rs  language_server.rs.in  lib.rs  location_translation.rs  main.rs  main.rs.in  name.rs  rpc.rs  server.rs  text_edit.rs
src/command/: completion.rs  definition.rs  document_highlight.rs  document_symbols.rs  formatting.rs  hover.rs  initialize.rs  mod.rs  signature_help.rs  symbol.rs
syntaxes/: gluon.tmLanguage  gluon.tmLanguage.json
tests/: completion.rs  debugger.rs  diagnostics.rs  format.rs  goto.rs  hover.rs  infinite_loop.glu  issues.rs  main.glu
tests/support/: mod.rs
