[package]
name = "gluon_language-server"
version = "0.13.1-alpha.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
description = "Language server providing completion for gluon"
license = "MIT"
repository = "https://github.com/gluon-lang/gluon_language-server"
edition = "2018"

[workspace]

[dependencies]
clap = "2.19.0"

log = "0.4.0"
env_logger = "0.6.0"

failure = "0.1"

codespan = "0.3"
codespan-lsp = "0.3"
codespan-reporting = "0.3"

url = "1.2.0"
url_serde = "0.2.0"

combine = "3.0.0"

async-trait = "0.1"
async-pipe = "0.1"
jsonrpc-core = "14"
futures_01 = { version = "0.1.0", package = "futures" }
futures = { version = "0.3", features = ["compat"] }
tokio = "0.1.6"
tokio_02 = { version = "0.2", package = "tokio", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
tokio-io = "0.1.3"
tokio-codec = "0.1"
tokio-compat = { version = "0.1", features = ["rt-full"] }
bytes = "0.5"

serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"

languageserver-types = "0.54.0"
debugserver-types = "0.5.0"

gluon = { version = "0.15.1", features = ["serialization", "regex", "rand", "web"] }
gluon_completion = "0.15.1"
gluon_format = "0.15.1"

[dev-dependencies]
pretty_assertions = "0.6"
partial-io = { version = "0.3.0", features = ["tokio", "quickcheck"] }
quickcheck = "0.6.0"

# [patch.crates-io]
# gluon_base = { path = "../gluon/base" }
# gluon_parser = { path = "../gluon/parser" }
# gluon_check = { path = "../gluon/check" }
# gluon_format = { path = "../gluon/format" }
# gluon_completion = { path = "../gluon/completion" }
# gluon_vm = { path = "../gluon/vm" }
# gluon = { path = "../gluon" }
